--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "main":"Speech.js",
   "devDependencies": {
     "worker-loader": "^1.1.1"
   }
